styles.css
body {
	height: 100%;
	background: url("https://i.imgur.com/wt4NRqA.jpg");
	font-family: 'Work Sans', sans-serif !important;
	font-size: 100%;
	color: white;
	margin: 0;
	padding-top: 0;
}
@media only screen and (max-width: 450px) {
	.header {
		display: none;
	}
	#clock {
		font-size: 600%;
		text-align: center;
	}

}
@media only screen and (min-width: 450px) {
	.header {
		margin-left: 3em;
		margin-top: 1em;
}
	#clock {
		font-size: 800%;
		text-align: center;
}
}
.aot {
	position: fixed;
	top: 0.5em;
	left: 1.7em;
	z-index: 999;
	cursor: pointer;
}
#menubar {
	position: fixed;
	width: 100%;
	height: 75px;
	-webkit-box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
	-moz-box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
	box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
}
.main {
	margin-top: 85px;
	position: fixed;
	width: 100%
}
#settings {
	height: 100%;
	width: 0px;
	position: absolute;
	top: 0;
	left: 0;
	overflow-x: hidden;
	transition: 0.2s;
	z-index: 2;
	-webkit-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
	-moz-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
	box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
	background-color: rgba(50, 50, 50, 0.9);
}
#todomenu {
	height: 0px;
	width: auto;
	position: absolute;
	bottom: 0;
	right: 0;
	overflow-y: hidden;
	transition: 0.2s;
	z-index: 2;
	-webkit-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
	-moz-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
	box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
	background-color: rgba(50, 50, 50, 0.9);
	margin: 5px;
	padding: 0px 5px 0px 5px;
}
#close {
	height: 100%;
	width: 0;
	position: fixed;
	top: 0;
	left: 0;
	overflow-x: hidden;
	transition: 0.1s;
	z-index: 1;
	background-color: rgba(50, 50, 50, 0.1);
}
input[type=text] {
	background-color: rgba(50, 50, 50, 0.4);
	border: none;
	border-bottom: 1px solid #000000;
	font-size: 110%;
	font-family: 'Work Sans', sans-serif;
}
.confirmbutton {
	height: 25px;
	width: 25px;
	background-color: rgba(118, 255, 3, 0.7);
	border: none;
	color: white;
}
.removebutton {
	height: 25px;
	width: 25px;
	background-color: rgba(200, 0, 0, 0.7);
	border: none;
	color: white;
}
.closebutton {
	height: 50px;
	width: 50px;
	background-color: rgba(200, 0, 0, 0.7);
	border: none;
	color: white;
	float: right;
	margin-top: 10px;
	margin-right: 5px;
	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
}
#todobutton {
	height: 50px;
	width: 50px;
	background-color: rgba(200, 200, 200, 0.3);
	border: none;
	color: white;
	float: right;
	position: fixed;
	margin-bottom: 25px;
	margin-right: 25px;
	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
	bottom: 0;
	right: 0;
}
.round {
	border-radius: 100%;
}
.settingsinput {
	width: 200px;
	color: white;
}
#cpicker {
	border-width: 0px;
	border: none !important;
	background-color: transparent;
	height: 20px;
	width: 100px;
}
#closetodobutton {
	margin-right: 5px;
	z-index: 3;
	margin-bottom: 50px;
	position: fixed;
	right: 5px;
	visibility: hidden;
	background-color: rgba(200, 200, 200, 0.2);
}

